pod-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-server
  labels:
    env: test
    app: server
    owner: KirillMaidannikov
spec:
  containers:
    - name: container-server
      image: ialavash/cloud-cs:inference-service
      ports:
        - containerPort: 8000
