all-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec: # Начало спецификации деплоймента
  replicas: 1 # Количество запускаемых реплик
  selector:
    matchLabels:
      app: postgres
  template: # Селектор для выбора запускаемого пода
    metadata:
      labels:
        app: postgres
    spec: # Конфигурация пода
      containers:
      - name: postgres
        image: postgres:15.2
        volumeMounts: # Указываем место монтирования тома
        - mountPath: postgresql/data
          name: pgdata
      volumes: # Указываем конфигурацию монтирования тома
      - name: pgdata
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP # Под доступен только внутри кластера
  ports: # Настраиваем внешний порт, доступный для остальных сервисов и ему соответствующий внутренний
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres # Указываем метку пода
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: ialavash/cloud-cs:keycloak
          args: [ "start" ] # Аргументы запуска контейнера
          ports:
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: LoadBalancer
  ports:
  - port: 8443
    targetPort: 8443
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference
  template:
    metadata:
      labels:
        app: inference
    spec:
      containers:
        - name: inference
          image: ialavash/cloud-cs:inference-service
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: inference
spec:
  type: LoadBalancer
  ports:
  - port: 8888
    targetPort: 8000
  selector:
    app: inference
