internal-service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    env: prod
    owner: KirillMaidannikov
spec:
  selector:
    app: my-server #Link to deployment
  ports:
    - name: app-listener
      protocol: TCP
      port: 80 # Port on LoadBalancer
      targetPort: 8000 # Port on POD
  type: ClusterIP
